--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(CMakeSFMLProject LANGUAGES CXX)
+project(TetrisFromScratch LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
@@ -13,14 +13,29 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics)
-target_compile_features(main PRIVATE cxx_std_17)
+add_executable(TetrisFromScratch 
+    src/main.cpp
+    src/GridManager.cpp
+    src/Tetromino.cpp
+)
+target_link_libraries(TetrisFromScratch PRIVATE sfml-graphics)
+target_compile_features(TetrisFromScratch PRIVATE cxx_std_17)
+
+# Define the assets directory
+set(ASSETS_FOLDER ${CMAKE_SOURCE_DIR}/assets)
+
+# Copy assets folder to the build output directory
+add_custom_command(
+    TARGET TetrisFromScratch
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${ASSETS_FOLDER} $<TARGET_FILE_DIR:TetrisFromScratch>/assets
+    COMMENT "Copying assets folder to output directory"
+)
 
 if(WIN32)
     add_custom_command(
-        TARGET main
+        TARGET TetrisFromScratch
         COMMENT "Copy OpenAL DLL"
-        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:TetrisFromScratch>
         VERBATIM)
 endif()
